--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,23 @@
 logging.level.org.elasticsearch.client.RestClient: off
+logging.level.org.apache.http: off
 logging.level.reactor.netty.resources: info
 
-es.protocol: http
 es.host: localhost
 es.port: 9200
+
+# optional configuration for SSL and basic security
+#es.protocol: https
+#es.trust_store_file: rootCA-new.p12
+#es.trust_store_password_file: rootCA-new.pwd
+#es.user_name: elastic
+#es.user_password_file: elastic.pwd
 
 es.connect_timeout_millis: 20000
 es.response_timeout_millis: 20000
 es.max_per_route_connections: 30
 es.max_conn_total: 100
 es.max_bulk_size: 10000000
+es.io_reactor_thread_count: 30
 
 indexer.index_name: people
 indexer.index_shards: 1
@@ -24,3 +32,4 @@ indexer.max_bulk_active: 30
 indexer.batch_size: 1000
 indexer.batch_count: 100
 
+indexer.response_warning_timeout_millis: 1000
